# querypilot

./: .gitignore  LEARNINGS.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: ask.py  schema.py
backend/app/core/: executor.py  llm.py  validator.py
backend/app/db/: introspect.py  session.py
backend/tests/: conftest.py  test_ask.py  test_validator.py
