[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.0",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]
